Rename file to index.html and update shopping

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         </div>
         <div class="car">
           <img
-            src="https://images7.alphacoders.com/447/447711.jpg"
+            src="https://i.imgur.com/wskwnon.jpeg"
             alt="Mazda RX-7"
             class="image-zoom"
             width="100%"
