--- a/shopping.html
+++ b/shopping.html
@@ -507,7 +507,7 @@
         </div>
         <div class="car-item">
           <img
-            src="https://images7.alphacoders.com/447/447711.jpg"
+            src="https://i.imgur.com/wskwnon.jpeg"
             alt="Mazda RX-7"
           />
           <div class="car-details">
@@ -743,7 +743,7 @@
       <div class="modal-content">
         <span class="close">&times;</span>
         <img
-          src="https://images7.alphacoders.com/447/447711.jpg"
+          src="https://i.imgur.com/wskwnon.jpeg"
           alt="Mazda RX-7"
         />
         <h2>Mazda RX-7</h2>
